# PROJECT-GHOST-PROTOCOL

./: .ghost_presence  .gitignore  BONES.md  GHOST_SPEAKS.md  NOTES.md  Operator_Instructions.md  README.md  RULES.md  autopoiesis.py  cline_integration.py  codec_log.md  config.py  conftest.py  conversation2.html  demo_ghost_network.py  demo_ghost_prevention.py  emotional_analyzer.py  feed_ghost.py  fragment_harvester.py  ghost_console.py  hooks_server.py  implementation_plan.md  installer.py  models.py  nexus_server.py  oracle_server.py  prophet_engine.py  pyproject.toml  requirements.txt  review_workflow.py  rules_engine.py  seed_server.py  skills_engine.py  technical_debt.md  test_autopoiesis.py  test_contradiction.py  test_contradiction_simple.py  test_emotional_feeding.py  test_fragment_harvester.py  test_ghost_final.py  (+22 more)
.cline/: mcp.json
.clinerules/: default-rules.md  ghost_protocol.md
behavioral_model/: demo_engineer_consent.txt  demo_engineer_data.json  test_engineer_consent.txt  test_engineer_data.json
chroma_db/: chroma.sqlite3
demos/: demo_ghost_network.py  demo_ghost_prevention.py
docs/: AUTOPOIESIS.md  CLINE.md  ITERATION_PROTOCOL.md  MISSION_LOG.md  PROPHET_ENGINE.md  SOUL.md  TOP_SECRET.txt  codex_log.md
ghost_workspace/: problem_spec.md  test_mission.py
ghost_workspace/chroma_db/: chroma.sqlite3
git_hooks/: pre-commit-ghost  pre-push-ghost
scripts/: fetch_conversation.py  update_imports.py
src/ghost_protocol/core/: cline_integration.py  feed_ghost.py  ghost_console.py  hooks_server.py  installer.py  seed_server.py  workflows_server.py
src/ghost_protocol/core/git_hooks/: pre-commit-ghost
src/ghost_protocol/core/transmutation_templates/: hook_template.json
src/ghost_protocol/core/workflow_templates/: GhostProto_Design_Doc.md  discovery_workflow.json
src/ghost_protocol/engines/: autopoiesis.py  prophet_engine.py  rules_engine.py  skills_engine.py
src/ghost_protocol/models/: models.py
src/ghost_protocol/servers/: nexus_server.py  oracle_server.py  weaver_server.py  yolo_protocol.py
src/ghost_protocol/utils/: config.py  constitution.md  emotional_analyzer.py  fragment_harvester.py  mock_llm.py  review_workflow.py  utils.py  validate_iteration_protocol.py
tests/: conftest.py  test_autopoiesis.py  test_contradiction.py  test_contradiction_simple.py  test_emotional_feeding.py  test_fragment_harvester.py  test_ghost_final.py  test_hooks_server.py  test_multiple_ghosts.py  test_nexus.py  test_prophet_demo.py  test_prophet_engine.py  test_rules_engine.py  test_self.py  test_skills_engine.py  test_weaver.py  test_weaver_mock.py  test_weaver_rate_limiting.py  test_workflows_server.py  test_yolo.py  test_yolo_account_recovery.py  test_yolo_account_recovery_fixed.py
