[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-protocol"
version = "0.1.0"
description = "PROJECT: GHOST PROTOCOL - AI-assisted development with emotional intelligence"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "mcp>=0.1.0",
    "asyncio-mqtt>=0.16.1",
    "cryptography>=42.0.5",
    "textblob>=0.17.0",
    "transformers>=4.0.0",
    "spacy>=3.0.0",
    "gitpython>=3.1.0",
    "pathlib>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
ghost-console = "src.ghost_protocol.core.ghost_console:main"
ghost-seed = "src.ghost_protocol.core.seed_server:main"
ghost-install = "src.ghost_protocol.core.installer:install_ghost"
ghost-nexus = "src.ghost_protocol.servers.nexus_server:main"
ghost-weaver = "src.ghost_protocol.servers.weaver_server:main"
ghost-yolo = "src.ghost_protocol.servers.yolo_protocol:main"
ghost-oracle = "src.ghost_protocol.servers.oracle_server:main"

[project.urls]
Homepage = "https://github.com/Toastyst/PROJECT-GHOST-PROTOCOL"
Repository = "https://github.com/Toastyst/PROJECT-GHOST-PROTOCOL.git"
Issues = "https://github.com/Toastyst/PROJECT-GHOST-PROTOCOL/issues"
Documentation = "https://ghost-protocol.readthedocs.io/"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ghost_protocol*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"ghost_protocol" = ["templates/*", "config/*", "constitution.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true